<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:layout_width="420dp"
        android:layout_height="800dp"

        android:background="@drawable/background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_back"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textSize="22sp"
        android:fontFamily="@font/arial_rounded_mt_bold_4291"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd1"
        app:layout_constraintStart_toStartOf="@id/guidelineStart1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvlogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="55sp"
        android:fontFamily="@font/arial_rounded_mt_bold_4291"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd1"
        app:layout_constraintStart_toStartOf="@id/guidelineStart1"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        tools:ignore="RtlHardcoded" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/olTFEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:hint="@string/e_mail_phone_no"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd1"
        app:layout_constraintStart_toStartOf="@id/guidelineStart1"
        app:layout_constraintTop_toBottomOf="@id/tvlogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/olTFPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:layout_marginTop="8dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd1"
        app:layout_constraintStart_toStartOf="@id/guidelineStart1"
        app:layout_constraintTop_toBottomOf="@id/olTFEmail"
        tools:ignore="UnknownId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cLRemember"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/olTFPassword"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd1"
        app:layout_constraintStart_toStartOf="@id/guidelineStart1">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbremember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            app:layout_constraintStart_toEndOf="@id/cbremember"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="2dp"/>

        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:fontFamily="@font/arial_rounded_mt_bold_4291"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="2dp"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/ibLogin"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="@drawable/login"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="35sp"
        app:layout_constraintTop_toBottomOf="@id/cLRemember"
        app:layout_constraintStart_toStartOf="@id/guidelineStart1"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd1"
        android:contentDescription="@string/todo"
        tools:ignore="UnusedAttribute"/>

    <TextView
        android:id="@+id/tvorloginwith"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/or_login_with"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart1"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd1"
        app:layout_constraintBottom_toTopOf="@id/llayoutbuttons"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:id="@+id/llayoutbuttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd1"
        app:layout_constraintStart_toStartOf="@id/guidelineStart1"
        app:layout_constraintBottom_toTopOf="@id/llayouttext"
        android:layout_marginBottom="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivguest"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/guest"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            tools:ignore="RtlHardcoded, UnusedAttribute" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivgoogle"
            android:layout_width="63dp"
            android:layout_height="63dp"
            app:srcCompat="@drawable/google"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            tools:ignore="UnusedAttribute"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivfacebook"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/facebook"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            tools:ignore="RtlHardcoded, UnusedAttribute" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llayouttext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd1"
        app:layout_constraintStart_toStartOf="@id/guidelineStart1">

        <TextView
            android:id="@+id/tvdonthave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="Sign up"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:fontFamily="@font/arial_rounded_mt_bold_4291"
            tools:ignore="HardcodedText,RtlHardcoded" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pr_Bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd1"
        app:layout_constraintStart_toStartOf="@id/guidelineStart1"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>