<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/tvhello"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/otp"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvVerification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verification"
        android:textColor="#ffffff"
        android:textSize="37sp"
        android:fontFamily="@font/arial_rounded_mt_bold_4291"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/tvhello"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvEnter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_otp_for_verification"
        android:textSize="15sp"
        android:lineSpacingExtra="5dp"
        android:textColor="@color/gray_blue"
        app:layout_constraintTop_toBottomOf="@id/tvVerification"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:layout_marginTop="145dp"/>

    <LinearLayout
        android:id="@+id/lLOTP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvEnter"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:layout_marginTop="65dp">
        
       <EditText
           android:id="@+id/edOTP1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:background="@drawable/edit_text"
           tools:ignore="RtlHardcoded"
           />

        <EditText
            android:id="@+id/edOTP2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:layout_marginLeft="17dp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/edOTP3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:layout_marginLeft="17dp"
            tools:ignore="RtlHardcoded"/>

        <EditText
            android:id="@+id/edOTP4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:layout_marginLeft="17dp"
            tools:ignore="RtlHardcoded"/>

        <EditText
            android:id="@+id/edOTP5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:layout_marginLeft="17dp"
            tools:ignore="RtlHardcoded"/>

        <EditText
            android:id="@+id/edOTP6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:layout_marginLeft="17dp"
            tools:ignore="RtlHardcoded"/>
        
    </LinearLayout>

    <TextView
        android:id="@+id/tvdontrecive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/doesn_t_receive_an_otp"
        android:textColor="@color/gray_blue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/lLOTP"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvResend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvdontrecive"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/resend_otp"
        android:fontFamily="@font/arial_rounded_mt_bold_4291"
        android:textSize="15sp"/>

    <ImageButton
        android:id="@+id/ibSignup"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="@drawable/next"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toBottomOf="@id/tvResend"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:layout_marginTop="110dp"
        tools:ignore="UnusedAttribute"/>

</androidx.constraintlayout.widget.ConstraintLayout>